<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">网络助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="baise">#FFFFFFFF</color>
    <string name="lblog1">"    专注于物联网之联网产品领域，提供形式多样的串口转网络模块。"</string>
    <string name="lblog2">"    供客户免费测试使用，请勿直接用于商业用途。"</string>
    <string name="lbnet">http://www.baidu.com</string>
    <string name="lbtel">12312323123</string>
    <string name="lbmail">Email:xxx@163.com</string>
</resources>
